--- a/README
+++ b/README
@@ -2,3 +2,4 @@
     - Un dossier "Tools" qui correspond au dossier "tp2" fourni
     - Le dossier "traduction_automatique" contenant les librairies utilisées
     - Un dossier "results" dans lequel les résultats seront écrits
+    - Pour le corpus ted, il faut générer le modèle de langue, en lançant le script generateModel.sh dans le dossier Model
